--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 
 dependencies {
     compile 'org.springframework:spring-context:4.3.7.RELEASE'
+    compile 'org.aspectj:aspectjweaver:1.8.10'
     testCompile 'org.assertj:assertj-core:3.6.2'
     testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0-${milestone}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.0-${milestone}"
